# vector-containers-demo

./: Cargo.toml  Dockerfile
client/: Cargo.toml
client/src/: main.rs
docker/: docker-compose.yml  vector.toml
echo/: Cargo.toml
echo/src/: main.rs
kubernetes/: Makefile  README.md
kubernetes/docker/: Dockerfile
kubernetes/kube/: echo.yaml  flog.yaml  install.sh  vector-agent-daemonset.yaml  vector-config.yaml
