[package]
name = "echo"
version = "0.1.0"
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.0-alpha.4"
tokio = "1.8.4"
pretty_env_logger = "0.3"
log = "0.4"
